[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/NPC/Test images/Aware.png" type="Texture" id=1]
[ext_resource path="res://Scenes/NPC/NPC.gd" type="Script" id=2]
[ext_resource path="res://Sprites/npc.png" type="Texture" id=3]
[ext_resource path="res://Scenes/NPC/Test images/Alert.png" type="Texture" id=4]
[ext_resource path="res://Scenes/NPC/Test images/Caution.png" type="Texture" id=5]
[ext_resource path="res://Scenes/NPC/Test images/Clear.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "Computing",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 2.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Move",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ ExtResource( 4 ), null ],
"loop": false,
"name": "Alert",
"speed": 1.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "Caution",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Question",
"speed": 1.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "NotAware",
"speed": 5.0
} ]

[node name="NPC" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="NPCsprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -78 )
scale = Vector2( 9.5, 9.75 )
frames = SubResource( 8 )

[node name="NPCcollisionBox" type="CollisionPolygon2D" parent="."]
position = Vector2( -352, -168 )
polygon = PoolVector2Array( 304, 48, 304, 168, 400, 168, 400, 48 )

[node name="DetectionBoxes" type="Area2D" parent="."]
modulate = Color( 0.596078, 0.0941176, 0.0941176, 1 )
self_modulate = Color( 0.176471, 0.0862745, 0.403922, 1 )
collision_layer = 8
collision_mask = 2

[node name="LineOfSight" type="CollisionPolygon2D" parent="DetectionBoxes"]
position = Vector2( 400, 104 )
rotation = -1.85771
polygon = PoolVector2Array( -78.138, 236.557, 199, -310, 329.803, -269.693, 282.775, 342.004 )

[node name="Proximity" type="CollisionPolygon2D" parent="DetectionBoxes"]
position = Vector2( -224, -96 )
polygon = PoolVector2Array( 80, 104, 360, 104, 344, -24, 216, -96, 120, -32 )

[node name="AlertState" type="AnimatedSprite" parent="."]
position = Vector2( 0, -160 )
scale = Vector2( 0.121681, 0.105432 )
frames = SubResource( 16 )
animation = "Question"

[node name="SpottedTimer" type="Timer" parent="."]
one_shot = true

[node name="De_agroTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="DetectionBoxes" to="." method="_on_DetectionBoxes_body_entered"]
[connection signal="body_exited" from="DetectionBoxes" to="." method="_on_DetectionBoxes_body_exited"]
